--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,11 +1,11 @@
-# Enable Colours
-set -g default-terminal 'xterm-256color'
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
-# Map Default Prefix
-set -g prefix C-a
+# Enable Mouse
+set -g mouse on
+
 unbind C-b
-bind-key C-a send-prefix
+set -g prefix C-Space
+bind C-Space send-prefix
 
 # Split Windows
 unbind %
@@ -17,25 +17,35 @@ bind - split-window -v
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
-# Resize Panes
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r l resize-pane -R 5
-bind -r h resize-pane -L 5
-bind -r m resize-pane -Z
-bind C-p previous-window
-bind C-n next-window
 
-# Enable Mouse
-set -g mouse on 
 
-# Terminal Scrollback
-set -g history-limit 50000
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
 
 # Enable VIM motions
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 set-option -g status-position top
 # Enable Mouse Dragging
@@ -56,6 +66,7 @@ set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # tmux sessions persist after resart
 set -g @plugin 'tmux-plugins/tmux-continuum' # autosaves sessions each 15 minutes
 
